<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">家居乐</string>
    <string name="welcome_intro">
            欢迎使用Android远程监控客户端。\n
    xmobileapp©2008-2009
	</string>
	<string name="btn_new">增加</string>
	<string name="btn_modify">修改</string>
	<string name="btn_delete">删除</string>
	<string name="connect">连接</string>
	<string name="table_sql">
	    CREATE TABLE tb_cammonitor_configs(
	    _id INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT,
	    name VARCHAR(30) NULL,
	    ip VARCHAR(64) NULL,
	    port NUMERIC NULL,
	    username VARCHAR(64) NULL,
	    password VARCHAR(64) NULL,
	    client_dir TEXT NULL,
	    connect_type NUMERIC DEFAULT 1 NULL
		)
	</string>
	<string name="drop_sql">
		drop table if EXISTS tb_cammonitor_configs;
	</string>
	<string name="connection_error">连接服务器错误</string>
	<string name="add_title">远程监控服务设置</string>
	<string name="myinfo_titile">"返回"</string>
	<string name="add_ip">主机名</string>
	<string name="add_type">类型</string>
	<string name="add_port">端口</string>
	<string name="add_username">用户名</string>
	<string name="add_password">用户密码</string>
	<string name="add_localdir">本地目录</string>
	<string name="btn_test">测试</string>
	<string name="btn_save">保存</string>
	<string name="btn_cancle">取消</string>
	<string name="btn_ok">确定</string>
	<string name="homeinfo_title">我的家庭信息</string>
	<string name="error">错误</string>
	<string name="error_ip">请输入主机名</string>
	<string name="error_port">请输入端口</string>
	<string name="CamMonitorConfigActivty_Cfg_Name">请输入配置的名称</string>
	<string name="server_disconnect">断开</string>
	
	<string name="username">用户名</string><string name="menu1">设置</string>
	<string name="password">密码</string>
	<string name="confirm">确定</string>
	<string name="close">取消</string>
	<string name="menu2">我的信息</string>
	<string name="menu3">退出</string>
	<string name="menu4">注销</string>
	<string name="tag">更改家庭Tag(本操作将通知所有成员)</string>
	<string name="tag_bt">确定</string>
	<string name="TaskProgressmsg">正在发帖。。。</string>
	<string name="error_tag_empty">tag设置错误</string>
	<string name="error_tag_gs_empty">tag不能为空</string>
	<string name="error_alias_empty">alias为空</string>
	<string name="input_alias">更改设备别名</string>
	<string name="myinfo_username">用户名    </string>
	<string name="myinfo_userid">帐号ID </string>
	<string name="myinfo_homeid">家庭组：</string>
	<string name="myinfo_phone">PHONE  </string>
	<string name="login_default_name">用户名/手机号/邮箱</string>
	<string name="login_default_pass">密码</string>
	<string name="exit">退出</string>
</resources>
