<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/myinfo_bgcolor2"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.00"
        android:background="@drawable/myinfo_bgcolor"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/myinfo_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/myinfo_back" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.60" >

            <ImageView
                android:id="@+id/login_im_icon"
                android:layout_width="65dp"
                android:layout_height="88dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="84dp"
                android:gravity="center_horizontal"
                android:src="@drawable/me" />

            <TextView
                android:id="@+id/myinfo_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/login_im_icon"
                android:layout_below="@+id/login_im_icon"
                android:layout_marginTop="26dp"
                android:gravity="center_horizontal"
                android:text="用户名"
                android:textColor="@color/black"
                android:textSize="25dp" />

        </RelativeLayout>
    </LinearLayout>
    
<View android:layout_width="fill_parent" 
    android:layout_height="1px" 
    android:background="@color/black"
     />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.39"
        android:background="@drawable/myinfo_bgcolor2"
        android:gravity="center_vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.62" >

            <TextView
                android:id="@+id/myinfo_userid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/myinfo_userid"
                android:textColor="@color/gray"
                android:textSize="25dp" />

        </RelativeLayout>

    </LinearLayout>

<View android:layout_width="fill_parent" 
    android:layout_height="1px" 
    android:background="@color/black"
     />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.26"
        android:gravity="center_vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.62"
             >

            <TextView
                android:id="@+id/myinfo_homeid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
                android:text="homeid"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/register_add_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              
                android:text="@string/myinfo_homeid"
                android:textColor="@color/gray"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/myinfo_goto_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/myinfo_bt" />

        </RelativeLayout>

    </LinearLayout>

<View android:layout_width="fill_parent" 
    android:layout_height="1px" 
    android:background="@color/black"
    
     /> 

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.26"
        android:gravity="center_horizontal|center_vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/myinfo_phone"
                android:textColor="@color/gray"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/myinfo_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="25dp" />

        </RelativeLayout>

    </LinearLayout>
<View android:layout_width="fill_parent" 
    android:layout_height="1px" 
    android:background="@color/black"
     /> 

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp" >

            <Button
                android:id="@+id/myinfo_select_unlockway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="#00FF00"
                android:text="选择解锁方式(长按)"
                android:textSize="24dp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/myinfo_select_unlockway"
                android:src="@drawable/myinfo_bt" />

        </RelativeLayout>

    </LinearLayout>
<View android:layout_width="fill_parent" 
    android:layout_height="1px" 
    android:background="@color/black"
     /> 

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_bg"
                android:text="注销"
                android:textSize="24dp" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:orientation="vertical" >

    </LinearLayout>

</LinearLayout>
